--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Selamay Hari Raya Idul Firti - 1442H</title>
+    <title>Selamat Hari Raya Idul Firti - 1442H</title>
 </head>
 
 <body>
